src/styles/Discover.module.css
*,
::before,
::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Outfit", sans-serif;
}

body {
  margin: 0;
  padding: 0;
  width: 100vw;
}

.discoverContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: relative;
  background-color: var(--primary-color);
}

.discoverTitle {
  display: flex;
  justify-content: center;
  align-items: center;
}

.discoverTitle h2 {
  margin-top: 4rem;
  margin-bottom: 0;
  font-size: 2.5rem;
  padding: 20px 0;
}

.discoverCardContainer {
  flex-wrap: wrap;
  position: relative;
  z-index: 1;
}

.discoverCardContainer h3 {
  text-transform: uppercase;
}

.discoverCard {
  margin: 3rem 0;
  height: 25rem;
  z-index: 1;
  cursor: pointer;
  opacity: 0;
  transition: opacity 0.5s ease;
}

.fadeInSlideIn {
  opacity: 0;
  transform: translateY(60px);
  animation: fadeInSlideIn 1s forwards;
}

@keyframes fadeInSlideIn {
  from {
    opacity: 0;
    transform: translateY(60px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

.cardImage {
  height: 25rem;
  background-size: cover;
  position: relative;
  border-radius: 10px;
}

.cardOverlay {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 18%;
  overflow: hidden;
  background-color: rgba(0, 0, 0, 0.25);
  padding: 20px;
  color: var(--primary-color);
  text-align: center;
  border-radius: 10px;
  transition: height 0.4s cubic-bezier(0.4, 0, 0.2, 1),
    background-color 0.4s cubic-bezier(0.4, 0, 0.2, 1);
}

.cardOverlay h3 {
  font-size: 1.5rem;
  font-weight: 500;
}

.cardOverlayTitle {
  margin-top: 0;
}

.expandedOverlay {
  height: 100%;
  background-color: rgba(0, 0, 0, 0.7);
  opacity: 1;
  transition: height 0.8s ease, background-color 0.8s ease;
}

.expandedOverlay h3 {
  margin-bottom: 0.5rem;
}

.expandedOverlay > div {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 1rem;
}

.expandedOverlay > div p {
  margin-bottom: 0.5rem;
}

.expandedText {
  margin-top: 3rem;
  max-width: 85%;
  color: var(--white-text-color);
}

.expandedBtn {
  padding: 0.5rem 1rem;
  background-color: transparent;
  color: var(--primary-color);
  border: 2px solid #fff;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.expandedBtn:hover {
  background-color: var(--hover-color);
  padding: 0.6rem 1.1rem;
  border: none;
}

/* Small phones */
@media only screen and (max-width: 400px) {
  .discoverTitle h2 {
    font-size: 2.25rem;
  }

  .cardOverlay h3 {
    font-size: 1.3rem;
  }
}

/* Uncommon phone size */
@media only screen and (min-width: 500px) and (max-width: 599px) {
  .discoverTitle h2 {
    margin-top: 0rem;
    font-size: 2.75rem;
  }

  .cardOverlay h3 {
    font-size: 1.5rem;
  }
}

/* Small Tablet */
@media only screen and (min-width: 600px) and (max-width: 769px) {
  .discoverTitle h2 {
    margin-top: 0rem;
    font-size: 3rem;
  }

  .cardOverlay h3 {
    font-size: 1.5rem;
  }

  .expandedText {
    margin-top: 4.5rem;
  }
}

/* Small Desktop */
@media only screen and (min-width: 770px) and (max-width: 849px) {
  .discoverCardContainer {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-auto-rows: auto;
    gap: 34px;
  }

  .discoverCardContainer .discoverCard {
    width: calc(50% - 20px);
  }

  .discoverCard {
    margin-bottom: 7rem;
  }

  /* Margin from first row to second */
  .discoverCardContainer .discoverCard:nth-child(n + 1):nth-child(-n + 2) {
    margin-bottom: -2rem;
  }

  .discoverTitle h2 {
    margin-top: 0rem;
    font-size: 3rem;
  }

  .cardOverlay h3 {
    font-size: 1.5rem;
  }

  .cardImage {
    height: 26rem;
    width: 21rem;
  }

  .expandedText {
    margin-top: 3.5rem;
  }
}

/* Medium Desktop */
@media only screen and (min-width: 850px) and (max-width: 999px) {
  .discoverCardContainer {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-auto-rows: auto;
    gap: 40px;
  }

  .discoverCardContainer .discoverCard {
    width: calc(50% - 20px);
  }

  .discoverCard {
    margin-bottom: 8.5rem;
  }

  /* Margin from first row to second */
  .discoverCardContainer .discoverCard:nth-child(n + 1):nth-child(-n + 2) {
    margin-bottom: 0;
  }

  .discoverTitle h2 {
    margin-top: 0rem;
    font-size: 3rem;
  }

  .cardOverlay h3 {
    font-size: 1.7rem;
  }

  .cardImage {
    height: 28rem;
    width: 24rem;
  }

  .expandedText {
    margin-top: 5.5rem;
  }
}

/* Large Desktop */
@media only screen and (min-width: 1000px) and (max-width: 2199px) {
  .discoverCardContainer {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-auto-rows: auto;
    gap: 40px;
  }

  .discoverCardContainer .discoverCard {
    width: calc(50% - 20px);
  }

  .discoverCard {
    margin-bottom: 13rem;
  }

  /* Margin from first row to second */
  .discoverCardContainer .discoverCard:nth-child(n + 1):nth-child(-n + 2) {
    margin-bottom: 4rem;
  }

  .discoverTitle h2 {
    margin-top: 2rem;
    font-size: 3rem;
  }

  .cardOverlay h3 {
    font-size: 1.7rem;
  }

  .cardImage {
    height: 32rem;
    width: calc(15rem + 20vw);
  }

  .expandedText {
    margin-top: 6rem;
  }
}

/* Full desktop */
@media only screen and (min-width: 2200px) {
  .discoverCardContainer {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-auto-rows: auto;
    gap: 40px;
  }

  .discoverCardContainer .discoverCard {
    width: calc(50% - 20px);
  }

  .discoverCard {
    margin-bottom: 15rem;
  }

  /* Margin from first row to second */
  .discoverCardContainer .discoverCard:nth-child(n + 1):nth-child(-n + 2) {
    margin-bottom: 6rem;
  }

  .discoverTitle h2 {
    margin-top: 12rem;
    font-size: 3rem;
  }

  .cardOverlay h3 {
    font-size: 1.7rem;
  }

  .cardImage {
    height: 34rem;
    width: 50rem;
  }

  .expandedText {
    margin-top: 9rem;
  }
}

